tdf#155321 sc: fix color of the highest value on percentile color scale

if the highest value occurs multiple times in the data set.

Also for coloring based on the percentile, use always the end
of the color scale for the highest values, like other spreadsheets
do, i.e. not the first possible color in the case of repeating
values. For example, the corner case in the test document is not
a red and two yellow cells any more, but a red and two green cells.

Note: color of the other repeating values still differs from
MSO, but the same as in Google Sheets.

Change-Id: I1d7eacec6e442c1112a9568e64dd6461e2ff2fbd
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/152117
Reviewed-by: László Németh <nemeth@numbertext.org>
Tested-by: László Németh <nemeth@numbertext.org>
Signed-off-by: Xisco Fauli <xiscofauli@libreoffice.org>
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/152491
Tested-by: Jenkins